# stree-gp

./: Makefile.am  TODO  configure.ac
src/: config.cpp  individual.cpp
streegp/: config.hpp  context.hpp  crossover.hpp  individual.hpp  init.hpp  mutation.hpp  random.hpp  results.hpp  selection.hpp  streegp.hpp
streegp/impl/: config.ipp  crossover.ipp  init.ipp  mutation.ipp  random.ipp  results.ipp  selection.ipp
tests/: config1.cpp  crossover1.cpp  indiv.hpp  init1.cpp  macros.hpp  mutation1.cpp
